Renamed soundManager.js to soundmanager.js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- <link rel="stylesheet" href="css/lightBlue.css" /> -->
 
     <script src="js/functions.js"></script>
-    <script src="js/soundManager.js"></script>
+    <script src="js/soundmanager.js"></script>
 
     <script src="js/configMenu.js" defer></script>
     <script src="js/buttons.js" defer></script>
