WhatsApp will work now
Trying to make metadata so WhatsApp can show a better visualization of what the link is

--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Minesweeper</title>
     <link rel="shortcut icon" href="icon.png" type="image/x-icon" />
+    <meta name="description" content="This is a recreation of the classic Minesweeper game" />
+    <meta property="og:title" content="Minesweeper" />
+    <meta property="og:url" content="https://giovannieliasdarosa.github.io/Minesweeper/" />
+    <meta
+      property="og:description"
+      content="This is a recreation of the classic Minesweeper game"
+    />
+    <meta property="og:image" content="icon.png" />
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/map.css" />
