Trying to make WhatsApp link more cool

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       content="This is a recreation of the classic Minesweeper game"
     />
     <meta property="og:image" content="icon.png" />
+    <meta property="og:type" content="article" />
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/map.css" />
