--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       property="og:description"
       content="This is a recreation of the classic Minesweeper game"
     />
-    <meta property="og:image" content="icon.png" />
+    <meta
+      property="og:image"
+      content="https://giovannieliasdarosa.github.io/Minesweeper/icon.png"
+    />
     <meta property="og:type" content="article" />
 
     <link rel="stylesheet" href="css/style.css" />
